Bug 25604 - z80: [patch] Fix segfault caused by infinite recursion
Summary: z80: [patch] Fix segfault caused by infinite recursion
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: gas (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-26 12:10 UTC by Sergey Belyashov
Modified: 2020-03-03 13:11 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments
fix recursion patch (543 bytes, patch)
2020-02-26 12:10 UTC, Sergey Belyashov
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Sergey Belyashov 2020-02-26 12:10:23 UTC
Created attachment 12324 [details]
fix recursion patch

Fix GAS segfault on some rare circumstances.
Comment 1 Sourceware Commits 2020-03-03 13:10:30 UTC
The master branch has been updated by Nick Clifton <nickc@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=8326546ebb46bba75a01e441960f408dd7ccdf2c

commit 8326546ebb46bba75a01e441960f408dd7ccdf2c
Author: Sergey Belyashov <sergey.belyashov@gmail.com>
Date:   Tue Mar 3 13:09:19 2020 +0000

    Fix a potential illegal memory access in the Z80 assembler.
    
    	PR 25604
    	* config/tc-z80.c (contains_register): Prevent an illegal memory
    	access when checking an expression for a register name.
Comment 2 Nick Clifton 2020-03-03 13:11:10 UTC
Patch applied.