Fix a potential illegal memory access in the Z80 assembler.

PR 25604
	* config/tc-z80.c (contains_register): Prevent an illegal memory
	access when checking an expression for a register name.